<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharCreateActivity">

    <EditText
        android:id="@+id/createNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/createFinishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chaSeekBar" />

    <Spinner
        android:id="@+id/raceSpinner"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNameEdit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/createCharacter"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/classSpinner"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceSpinner" />

    <SeekBar
        android:id="@+id/strSeekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classSpinner" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/strColon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/strSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/classSpinner" />

    <TextView
        android:id="@+id/strNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/strSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/classSpinner"
        tools:text="10" />

    <SeekBar
        android:id="@+id/dexSeekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strSeekBar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dexColon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/dexSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/strSeekBar" />

    <TextView
        android:id="@+id/dexNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/dexSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/strSeekBar"
        tools:text="10" />

    <SeekBar
        android:id="@+id/conSeekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dexSeekBar" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/conColon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/conSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/dexSeekBar" />

    <TextView
        android:id="@+id/conNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/conSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/dexSeekBar"
        tools:text="10" />

    <SeekBar
        android:id="@+id/wisSeekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conSeekBar" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/wisColon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/wisSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/conSeekBar" />

    <TextView
        android:id="@+id/wisNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/wisSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/conSeekBar"
        tools:text="10" />

    <SeekBar
        android:id="@+id/intSeekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wisSeekBar" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/intColon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/intSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/wisSeekBar" />

    <TextView
        android:id="@+id/intNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/intSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/wisSeekBar"
        tools:text="10" />

    <SeekBar
        android:id="@+id/chaSeekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intSeekBar" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/chaColon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/chaSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/intSeekBar" />

    <TextView
        android:id="@+id/chaNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/chaSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/intSeekBar"
        tools:text="10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/raceColon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/raceSpinner"
        app:layout_constraintTop_toBottomOf="@+id/createNameEdit" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/classColon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/classSpinner"
        app:layout_constraintTop_toBottomOf="@+id/raceSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>