<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharSheetActivity">

    <TextView
        android:id="@+id/charNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Character name" />

    <TextView
        android:id="@+id/levelRaceClassLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charNameLabel"
        tools:text="Level 1 Race Class" />

    <TextView
        android:id="@+id/strLabel"
        android:layout_width="46dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hpNumber"
        tools:text="STR 11" />

    <TextView
        android:id="@+id/dexLabel"
        android:layout_width="46dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/strLabel"
        app:layout_constraintTop_toBottomOf="@+id/hpNumber"
        tools:text="DEX 11" />

    <TextView
        android:id="@+id/conLabel"
        android:layout_width="46dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/dexLabel"
        app:layout_constraintTop_toBottomOf="@+id/hpNumber"
        tools:text="CON 11" />

    <TextView
        android:id="@+id/wisLabel"
        android:layout_width="46dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/intLabel"
        app:layout_constraintTop_toBottomOf="@+id/hpNumber"
        tools:text="WIS 11" />

    <TextView
        android:id="@+id/intLabel"
        android:layout_width="46dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/chaLabel"
        app:layout_constraintTop_toBottomOf="@+id/hpNumber"
        tools:text="INT 11" />

    <TextView
        android:id="@+id/chaLabel"
        android:layout_width="46dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hpNumber"
        tools:text="CHA 11" />

    <TextView
        android:id="@+id/hpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/hp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/hpBar"
        app:layout_constraintTop_toBottomOf="@+id/levelRaceClassLabel" />

    <TextView
        android:id="@+id/hpNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hpBar"
        tools:text="10/10" />

    <ProgressBar
        android:id="@+id/hpBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="234dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:max="10"
        android:progress="5"
        android:progressTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelRaceClassLabel" />

    <Button
        android:id="@+id/takeDamageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/takeDamage"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wisLabel" />

    <Button
        android:id="@+id/restButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/rest"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeDamageButton" />

    <Button
        android:id="@+id/levelUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/levelUp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restButton" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/goBack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>